# ChangeLog for perl-core/PodParser
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.53 2012/04/28 01:46:55 aballier Exp $

  28 Apr 2012; Alexis Ballier <aballier@gentoo.org> PodParser-1.380.0.ebuild:
  keyword ~amd64-fbsd

  30 Jul 2011; Torsten Veller <tove@gentoo.org> PodParser-1.380.0.ebuild:
  Drop ~sparc-fbsd KEYWORD

*PodParser-1.380.0 (25 Apr 2011)

  25 Apr 2011; Torsten Veller <tove@gentoo.org> -PodParser-1.38.ebuild,
  +PodParser-1.380.0.ebuild:
  Change version scheme

  17 Jan 2010; Torsten Veller <tove@gentoo.org> -PodParser-1.35.ebuild:
  Cleanup

  05 Jan 2010; nixnut <nixnut@gentoo.org> PodParser-1.38.ebuild:
  ppc stable #288026

  16 Dec 2009; Jonathan Callen <abcd@gentoo.org> PodParser-1.35.ebuild,
  PodParser-1.38.ebuild:
  QA: Transfer prefix keywords

  14 Dec 2009; Raúl Porcel <armin76@gentoo.org> PodParser-1.38.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #288026

  10 Dec 2009; Brent Baude <ranger@gentoo.org> PodParser-1.38.ebuild:
  Marking PodParser-1.38 ppc64 stable for bug 288026

  07 Dec 2009; Markus Meier <maekke@gentoo.org> PodParser-1.38.ebuild:
  arm stable, bug #288026

  07 Dec 2009; Jeroen Roovers <jer@gentoo.org> PodParser-1.38.ebuild:
  Stable for HPPA (bug #288026).

  04 Dec 2009; Torsten Veller <tove@gentoo.org> PodParser-1.38.ebuild:
  Stable on amd64 (#288026)

  04 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  PodParser-1.38.ebuild:
  x86 stable, bug 288026

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -PodParser-1.32.ebuild,
  -PodParser-1.34.ebuild, -PodParser-1.36.ebuild:
  Cleanup

*PodParser-1.38 (10 Feb 2009)

  10 Feb 2009; Torsten Veller <tove@gentoo.org> -PodParser-1.37.ebuild,
  +PodParser-1.38.ebuild:
  Version bump. Cleanup

*PodParser-1.37 (05 Feb 2009)

  05 Feb 2009; Torsten Veller <tove@gentoo.org> +PodParser-1.37.ebuild:
  Version bump
