@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST Pod-Parser-1.38.tar.gz 103288 RMD160 820a07d928b6795f983cf3e92714d34a883b652c SHA1 099a41475a92465c4997234930cd37a3009e3efa SHA256 dc66e52463967b6711644a15f8fd36406f7782d79c4907a07b896e56efffe071
+DIST Pod-Parser-1.51.tar.gz 105250 RMD160 dd21a0be347d50558cacf98ae7eb557bdf3eea3d SHA1 a51cd3e3866f97e048b8b1ed4060b08cf693e444 SHA256 2078c0aea6fdcf20492d7f4c75382da6c05d354afbd726321377efbd214dc64d
 EBUILD PodParser-1.380.0.ebuild 791 RMD160 f6621eb64d711bb930247a8d0b06734056f42f48 SHA1 7697011be2b2e130937eb54f63d14292d1264e59 SHA256 0c82999cf237c8e9893331addb2ed334c7b29e55855ff4207b797b452d7a2260
-MISC ChangeLog 7548 RMD160 81e0f94fd0c5467c146c77ea37dad98d448cc529 SHA1 c0e386edcec98b57eac60fa622418c9f645e4fdc SHA256 1d63dab343f3863d92e1181c5f8094ce8d7cc378ea0e25692d9c8bfb2a7801f2
+EBUILD PodParser-1.510.0.ebuild 729 RMD160 a813418306d25237d5dca6f99bef40cf77112df4 SHA1 ad5ab3f4406f0ae8a3c503dd4d6d036a30524065 SHA256 5d9c09658e2558c3e1588e088226c544e7b2cf817119ba8d3ba3383e22f306fa
+MISC ChangeLog 7669 RMD160 4b2dc8c3bf9694bf7c0d818a7d44e5a7d79aefe1 SHA1 436694d7f5f72b0df482c478c8fd0e22e09bb09c SHA256 45467fef67cded184f6d4fe3c25303c6c9902531b8a27e5b6e1980c8869b4f3e
 MISC metadata.xml 236 RMD160 d0b70561b307faf3e012b9054bd45dfd146423b2 SHA1 3b78bfec0247d0d2cdbd0a71fd8aa1a76456a416 SHA256 513da0a25df603a8fc71c2aa18c539c5510fb0b8209eee37d78ea5e610f06fc5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk+bTBQACgkQvFcC4BYPU0os4QCdGY1YvkP2Mt+XaRXE4vgcjtSM
-14QAnjazBoudPt54C9RwL8IVhETuFZLp
-=fQ8u
+iEYEAREIAAYFAk+hQ6IACgkQV3J2n04EauzpfQCcDAnr6wMz7HZNA3vtKcaLUwHf
+YoEAoL/cQiMMeH+O8QTICKMVSU71d8EX
+=jTXr
 -----END PGP SIGNATURE-----
